--- a/Algorithm/5. 归并排序.md
+++ b/Algorithm/5. 归并排序.md
@@ -6,35 +6,51 @@ Tags:Algorithm
 
 <!-- MDTOC maxdepth:6 firsth1:1 numbering:0 flatten:0 bullets:0 updateOnSave:1 -->
 
-[5. 归并排序](#5-归并排序)  
-&emsp;[5.0 介绍](#50-介绍)  
-&emsp;[5.1 实现](#51-实现)  
-&emsp;[5.2 自顶向下的归并排序](#52-自顶向下的归并排序)  
-&emsp;&emsp;[5.2.1 实现](#521-实现)  
-&emsp;&emsp;[5.2.2 性能](#522-性能)  
-&emsp;[5.3 自底向上的归并排序](#53-自底向上的归并排序)  
-&emsp;&emsp;[5.3.1 实现](#531-实现)  
-&emsp;&emsp;[5.3.2 性能](#532-性能)  
-&emsp;[5.4 比较](#54-比较)  
-&emsp;[5.5 展望](#55-展望)  
+[5. 归并排序](#5-归并排序)   
+&emsp;[5.1 介绍](#51-介绍)   
+&emsp;[5.2 归并过程](#52-归并过程)   
+&emsp;&emsp;[5.2.1 实现](#521-实现)   
+&emsp;[5.3 自顶向下的归并排序](#53-自顶向下的归并排序)   
+&emsp;&emsp;[5.3.1 实现](#531-实现)   
+&emsp;&emsp;[5.2.2 性能](#522-性能)   
+&emsp;&emsp;[5.2.3 改进](#523-改进)   
+&emsp;&emsp;&emsp;[5.2.3.1 小数组使用插入排序](#5231-小数组使用插入排序)   
+&emsp;&emsp;&emsp;[5.2.3.2 避免不必要的归并过程](#5232-避免不必要的归并过程)   
+&emsp;&emsp;&emsp;[5.2.3.3 转换数组角色节省拷贝时间](#5233-转换数组角色节省拷贝时间)   
+&emsp;[5.3 自底向上的归并排序](#53-自底向上的归并排序)   
+&emsp;&emsp;[5.3.1 实现](#531-实现)   
+&emsp;&emsp;[5.3.2 性能](#532-性能)   
+&emsp;[5.4 比较](#54-比较)   
+&emsp;[5.5 展望](#55-展望)   
 
 <!-- /MDTOC -->
 
 ---
 
-## 5.0 介绍
+## 5.1 介绍
 
 归并排序是一种递归算法；
+
 其主要思想是**分而治之**策略，通过将一个大数组分成一个个小数组，通过递归地分割，最后归并成一个有序的数组。
 
-需要注意的是，**比较是在归并的过程中实行的**。
+需要注意的是，**比较是在归并的过程中实行的**，真正实施比较和排序的方法是归并方法，所以才被称为归并排序。
 
-## 5.1 实现
+
+## 5.2 归并过程
+
+1. 复制原数组内容到一个新的辅助数组中
+
+
+2. 将辅助数组分为两半
+
+
+3. 分别遍历两半部分，将其元素进行比较，按顺序复制回原数组中
+
+### 5.2.1 实现
 
 ```java
-public static void merge(Comparable[] a, int lo, int mid, int hi) {
-    // Merge the a[lo...mid] and the a[mid... hi]
-
+private static void merge(Comparable[] a, Comparable[] aux, int lo, int mid, int hi) {
+    // i 表示左半边，j 表示右半边
     int i = lo, j = mid + 1;
 
     // Copy the a[lo...hi] to the assistant array
@@ -42,32 +58,33 @@ public static void merge(Comparable[] a, int lo, int mid, int hi) {
         aux[k] = a[k];
     }
 
-    // Merge
-    // During the merge, do the comparition
     for (int k = lo; k <= hi; k++) {
-        if (i > mid) {                  // When the left side was empty
+
+        if (i > mid) {          // 左边空了
             a[k] = aux[j++];
         }
-        else if (j > hi) {              // When the right side was empty
-                                        // Notice that the j is the middle index
-                                        // it could also be the lo and gradually reduce
+        else if (j > hi) {      // 右边空了
             a[k] = aux[i++];
         }
-        else if (less(aux[j], aux[i])) { // Either, compare the left side and the right side
-            a[k] = axu[j++];
+        else if (less(auk[j], auk[i])) {
+            // j 比 i 小，将 j 归并到数组中
+            a[k] = aux[j++];
         }
         else {
+            // i 比 j 小，将 i 归并到数组中
             a[k] = aux[i++];
         }
+
     }
+
 }
 ```
 
-## 5.2 自顶向下的归并排序
+## 5.3 自顶向下的归并排序
 
-它的思想是将数据集合分割，然后递归调用 sort 和 merge 来完成排序
+分治法思想，先排序左半边，后排序右半边，然后将两半归并。
 
-### 5.2.1 实现
+### 5.3.1 实现
 
 ```java
 public class Merge {
@@ -79,23 +96,143 @@ public class Merge {
         sort(a, 0, a.lenth - 1);
     }
 
-    private static void sort(Comparable[] a, int lo, int hi) {
+    private static void sort(Comparable[] a, Comparable[] aux, int lo, int hi) {
         if (hi <= lo) return;
         int mid = lo + (hi - lo) / 2;
 
-        sort(a, lo, mid);       // Sort the left side
-        sort(a, mid + 1, hi);   // Sort the right side
+        sort(a, aux, lo, mid);       // Sort the left side
+        sort(a, aux, mid + 1, hi);   // Sort the right side
 
-        merge(a, lo, mid, hi);  // Merge the result
+        merge(a, aux, lo, mid, hi);  // Merge the result
     }
 }
 ```
 
-> 注意，只有 merge 方法才真正进行了排序， sort 方法仅仅是分割数组
+> 在这里 `sort()` 方法只是对数组进行了简单的分割，而没有进行真正的排序过程
+
+
+> 在一些改进版本中，会在数组较小时，采用其他排序方法进行排序。
 
 ### 5.2.2 性能
 
 对于自顶向下的归并排序，需要 ${1 \over 2} NlogN \sim NlogN$ 次比较和 $6NlogN$ 次数组访问
+
+### 5.2.3 改进
+
+#### 5.2.3.1 小数组使用插入排序
+
+由于对于小数组来说，归并会产生不必要的复制消耗；
+
+所以，我们在数组较小时，采用插入排序进行排序过程，而不是全程使用归并算法。
+
+```java
+public static void sort(Comparable[] a, int lo, int hi) {
+    if (hi <= lo + CUTOFF - 1) {
+        Insertion.sort(a, lo, hi);
+        return;
+    }
+
+    int mid = lo + (hi - lo) / 2;
+
+    sort(a, lo, mid);       // Sort the left side
+    sort(a, mid + 1, hi);   // Sort the right side
+    merge(a, lo, mid, hi);  // Merge the result
+}
+```
+
+#### 5.2.3.2 避免不必要的归并过程
+
+如果前半边数组和后半边数组 **正好构成有序**；
+
+那就可以直接跳过归并过程，从而节省时间。
+
+![](https://ww3.sinaimg.cn/large/006tKfTcgy1fcfpxg6z6mj31dg09q0u2.jpg)
+
+
+```java
+public static void sort(Comparable[] a, int lo, int hi) {
+
+    if (hi <= lo + CUTOFF - 1) {
+        // 小数组使用插入排序
+        Insertion.sort(a, lo, hi);
+        return;
+    }
+
+    int mid = lo + (hi - lo) / 2;
+
+    sort(a, lo, mid);       // Sort the left side
+    sort(a, mid + 1, hi);   // Sort the right side
+
+    if (less(a[mid], a[mid + 1])) {
+        // 如果已经有序，则跳过归并过程
+        return;
+    }
+
+    merge(a, lo, mid, hi);  // Merge the result
+}
+```
+
+#### 5.2.3.3 转换数组角色节省拷贝时间
+
+由于归并需要先将原数组的内容拷贝到辅助数组中；
+
+为什么不直接将原输入数组当成辅助数组呢？
+
+所以，我们可以通过将数组的角色调换，以节省拷贝的时间。
+
+```java
+private static void merge(Comparable[] a, Comparable[] aux, int lo, int mid, int hi) {
+    // i 表示左半边，j 表示右半边
+    int i = lo, j = mid + 1;
+
+    // 原来的拷贝数组的代码不见了
+
+    // 现在，aux 和 a 角色互换
+    for (int k = lo; k <= hi; k++) {
+
+        if (i > mid) {          // 左边空了
+            aux[k] = a[j++];
+        }
+        else if (j > hi) {      // 右边空了
+            aux[k] = a[i++];
+        }
+        else if (less(auk[j], auk[i])) {
+            // j 比 i 小，将 j 归并到数组中
+            aux[k] = a[j++];
+        }
+        else {
+            // i 比 j 小，将 i 归并到数组中
+            aux[k] = a[i++];
+        }
+
+    }
+
+}
+
+
+private static void sort(Comparable[] a, Comparable[] aux, int lo, int hi) {
+            if (hi <= lo) return;
+        int mid = lo + (hi - lo) / 2;
+
+        // 注意，下面 aux 和 a 的顺序互换了
+        sort(aux, a, lo, mid);       // Sort the left side
+        sort(aux, a, mid + 1, hi);   // Sort the right side
+
+        merge(a, aux, lo, mid, hi);  // Merge the result
+    }
+}
+
+
+public static void sort(Comparable[] a) {
+    aux = new Comparable[a.length];
+
+    for (int i = 0; i < a.length ; i++) {
+        aux[i] = a[i];
+    }
+
+    sort(a, aux, 0, a.length - 1);
+}
+```
 
 ## 5.3 自底向上的归并排序
 
