--- a/Algorithm/快速排序.md
+++ b/Algorithm/快速排序.md
@@ -6,22 +6,22 @@ Tags: Algorithm
 
 <!-- MDTOC maxdepth:6 firsth1:1 numbering:0 flatten:0 bullets:0 updateOnSave:1 -->
 
-[快速排序](#快速排序)   
-&emsp;[1. 介绍](#1-介绍)   
-&emsp;[2. 切分](#2-切分)   
-&emsp;&emsp;[2.1 实现流程](#21-实现流程)   
-&emsp;&emsp;[2.2 实现](#22-实现)   
-&emsp;&emsp;[2.3 注意事项](#23-注意事项)   
-&emsp;[3. 基本实现](#3-基本实现)   
-&emsp;[4. 性能](#4-性能)   
-&emsp;[5. 改进](#5-改进)   
-&emsp;&emsp;[5.1 切换到插入排序](#51-切换到插入排序)   
-&emsp;&emsp;[5.2 三取样切分](#52-三取样切分)   
-&emsp;[6. 三向切分的快速排序](#6-三向切分的快速排序)   
-&emsp;&emsp;[6.1 实现原理](#61-实现原理)   
-&emsp;&emsp;[6.2 实现过程](#62-实现过程)   
-&emsp;&emsp;[6.2 实现](#62-实现)   
-&emsp;&emsp;[6.3 性能](#63-性能)   
+[快速排序](#快速排序)
+&emsp;[1. 介绍](#1-介绍)
+&emsp;[2. 切分](#2-切分)
+&emsp;&emsp;[2.1 实现流程](#21-实现流程)
+&emsp;&emsp;[2.2 实现](#22-实现)
+&emsp;&emsp;[2.3 注意事项](#23-注意事项)
+&emsp;[3. 基本实现](#3-基本实现)
+&emsp;[4. 性能](#4-性能)
+&emsp;[5. 改进](#5-改进)
+&emsp;&emsp;[5.1 切换到插入排序](#51-切换到插入排序)
+&emsp;&emsp;[5.2 三取样切分](#52-三取样切分)
+&emsp;[6. 三向切分的快速排序](#6-三向切分的快速排序)
+&emsp;&emsp;[6.1 实现原理](#61-实现原理)
+&emsp;&emsp;[6.2 实现过程](#62-实现过程)
+&emsp;&emsp;[6.2 实现](#62-实现)
+&emsp;&emsp;[6.3 性能](#63-性能)
 
 <!-- /MDTOC -->
 
@@ -136,7 +136,7 @@ private static int partition(Comparable[] a, int lo, int hi) {
 4. 注意循环的终止条件
 
     >　一个程序员常犯的错误就是没有考虑到数组可能包含与切分你元素的值相同的元素，从而导致了循环无法结束；
-    > 所以在上面的实现中，即使扫描到相同元素也会停止扫描
+    > 所以在上面的实现中，即使扫描到相同元素也会停止扫描，保证了不会因为重复元素而影响性能
 
 5. 注意递归的终止条件
 
@@ -170,7 +170,7 @@ public class Quick {
 ## 4. 性能
 
 快速排序需要 $\sim 2NlnN$ 次的比较和 $1/6$ 的交换
-在最坏情况下，快速排序需要 $N^2 / 2$ 次的比较
+在最坏情况下，当输入数组本身就是有序时，快速排序需要 $N^2 / 2$ 次的比较
 
 **但是通过打乱输入保证随机性可以防止这种情况的发生**
 
