--- a/Algorithm/优先队列和堆排序.md
+++ b/Algorithm/优先队列和堆排序.md
@@ -1,4 +1,4 @@
-# 7. 优先队列
+# 优先队列和堆排序
 
 Tags: Algorithm
 
@@ -6,32 +6,35 @@ Tags: Algorithm
 
 <!-- MDTOC maxdepth:6 firsth1:1 numbering:0 flatten:0 bullets:0 updateOnSave:1 -->
 
-[7. 优先队列](#7-优先队列)  
-&emsp;[7.1 实现](#71-实现)  
-&emsp;&emsp;[7.1.1 基本实现](#711-基本实现)  
-&emsp;&emsp;[7.1.2 二叉堆实现](#712-二叉堆实现)  
-&emsp;&emsp;&emsp;[7.1.2.1 二叉堆的定义](#7121-二叉堆的定义)  
-&emsp;&emsp;&emsp;[7.1.2.2 二叉堆的实现](#7122-二叉堆的实现)  
-&emsp;&emsp;&emsp;[7.1.2.3 原理](#7123-原理)  
-&emsp;&emsp;&emsp;[7.1.2.4 功能的实现](#7124-功能的实现)  
-&emsp;[7.2 索引优先队列](#72-索引优先队列)  
-&emsp;&emsp;[例子：使用优先队列的多项归并](#例子：使用优先队列的多项归并)  
-&emsp;[7.3 堆排序](#73-堆排序)  
-&emsp;&emsp;[7.3.1 建立二叉堆](#731-建立二叉堆)  
-&emsp;&emsp;[7.3.2 销毁二叉堆（排序）](#732-销毁二叉堆（排序）)  
-&emsp;&emsp;[7.3.3 性能](#733-性能)  
+[优先队列和堆排序](#优先队列和堆排序)   
+&emsp;[1. 介绍](#1-介绍)   
+&emsp;[2. 基本实现](#2-基本实现)   
+&emsp;[3. 二叉堆实现](#3-二叉堆实现)   
+&emsp;&emsp;[3.1 二叉堆的定义](#31-二叉堆的定义)   
+&emsp;&emsp;[3.2 二叉堆的表示法](#32-二叉堆的表示法)   
+&emsp;&emsp;[3.3 原理](#33-原理)   
+&emsp;&emsp;[3.4 功能的实现](#34-功能的实现)   
+&emsp;[4. 索引优先队列](#4-索引优先队列)   
+&emsp;&emsp;[4.1 实现](#41-实现)   
+&emsp;&emsp;[4.2 使用优先队列的多项归并](#42-使用优先队列的多项归并)   
+&emsp;[5. 堆排序](#5-堆排序)   
+&emsp;&emsp;[5.1 实现原理](#51-实现原理)   
+&emsp;&emsp;&emsp;[5.1.1 建立二叉堆](#511-建立二叉堆)   
+&emsp;&emsp;&emsp;[5.1.1 销毁二叉堆（排序）](#511-销毁二叉堆（排序）)   
+&emsp;&emsp;[5.2 实现](#52-实现)   
+&emsp;&emsp;[5.3 性能](#53-性能)   
 
 <!-- /MDTOC -->
 
 ---
 
+## 1. 介绍
+
 优先队列是一种类似队列的数据结构，但是支持**删除最大或最小元素**以及**插入元素**
 
 最重要的一点是，优先队列能存储很大的数据量，或者当你的内存很小的时候进行一些队列的操作
 
-## 7.1 实现
-
-### 7.1.1 基本实现
+## 2. 基本实现
 
 1. 数组实现（无序）
 
@@ -50,42 +53,38 @@ Tags: Algorithm
     > 由于上面使用了**栈**和**队列**这几种数据结构，我们可以使用更高效的链表来实现他们。
     具体的算法思想和数组实现一致。
 
-### 7.1.2 二叉堆实现
+## 3. 二叉堆实现
 
-#### 7.1.2.1 二叉堆的定义
+### 3.1 二叉堆的定义
 
-二叉堆是一个满足**堆有序**的**完全二叉树**，在数组中按照层级储存。
+二叉堆是一个满足**堆有序**的**完全二叉树**
 
-> 堆有序：当所有的二叉树节点都**大于或等于**他们的**两个子节点**时，称二叉树堆有序
+>堆有序：当所有的二叉树节点都**大于或等于**他们的**两个子节点**时，称二叉树堆有序
 
 > 推论：二叉堆的根节点比任何节点都要大
 
-有关一些前置知识，可以查看二叉树部分
 
-#### 7.1.2.2 二叉堆的实现
+### 3.2 二叉堆的表示法
 
-需要注意的是，二叉堆实际上是一个**完全二叉树**，而完全二叉树可以轻松地使用数组来实现它。
-**重要：我们不使用 a[0]**
+因为二叉堆是一个**完全二叉树**；
 
-关于前置知识，请查看完全二叉树部分
+所以，我们可以轻松的使用数组来表示一个二叉堆。
 
-#### 7.1.2.3 原理
+**需要注意的是，为了与参数上的索引对应，我们不使用 `a[0]`**
+
+### 3.3 原理
 
 主要的原理是**如何去重新排序一个二叉堆**
 当我们进行比较和交换的时候，二叉堆的顺序将会被打破，所以我们需要重建二叉堆(**reheapifying**)
 
 主要的算法思想是**上浮**和**下沉**
-当一个节点获得了更高的优先级的时候，我们将其上浮
+当一个节点获得了更高的优先级的时候，我们将其上浮，通常是由于我们在二叉堆的底部插入了一个新节点导致的。
 
-> 通常是由于我们在二叉堆的底部插入了一个新节点导致的
-
-当一个节点优先级降低时，我们将它下沉
-
-> 通常是我们用一个低优先级的节点替换了根节点的时候（其实是进行了删除操作）
+当一个节点优先级降低时，我们将它下沉，通常是我们用一个低优先级的节点替换了根节点的时候（其实是进行了删除操作）
 
 1. 上浮
 
-    > 当一个节点比他的父节点大事，我们将它和它的父亲交换以恢复二叉堆的次序
+    > 当一个节点比他的父节点大的时，我们将它和它的父亲交换以恢复二叉堆的次序
     **这是一个递归的操作，如果上浮后还存在二叉堆次序损坏，那么就继续上浮**
 
 2. 下沉
@@ -93,7 +92,33 @@ Tags: Algorithm
     > 当一个节点比它的**两个子节点**都要小的时候，我们将它与**较大的子节点交换**以恢复二叉堆的次序    **如果下沉之后仍存在此情况，继续下沉**
 
 
-#### 7.1.2.4 功能的实现
+```java
+private void swim(int k) {
+    while(k > 1 && less(k / 2, k)) {
+        exch(k, k / 2);
+        k = k / 2;
+    }
+}
+
+private void sink(int k) {
+    while(k * 2 < N) {
+        int j = k * 2;
+
+        if (less(j, j + 1)) {
+            j ++:
+        }
+
+        if (!less(k, j)) {
+            break;
+        }
+
+        exch(k, j);
+        k = j;
+    }
+}
+```
+
+### 3.4 功能的实现
 
 1. 插入元素
 
@@ -118,19 +143,44 @@ public Key delMax() {
 }
 ```
 
-## 7.2 索引优先队列
+## 4. 索引优先队列
 
 索引优先队列是一种带了索引的优先队列；
+
+这里的索引指的是，队列中的元素 **在队列的位置。**
+
+至于优先队列为何需要索引，实际上是为了方便修改队列里的数据。
+
 有了这个索引，我们就可以处理一些大型的输入数据（甚至可能都没办法一次性读入内存的数据），或者在一些小内存机器上工作
 
 主要的改变有：
+
 1. 我们将元素和它的索引一起插入
+
 2. 我们删除最大元素的时候，返回它的索引
 
-### 例子：使用优先队列的多项归并
+
+### 4.1 实现
+
+使用 3 个数组：
+
+1. `pq[]`
+
+    > 优先队列的堆，下标是堆的位置，值是 **索引**
+
+2. `qp[]`
+
+    > 索引数组，是 `pq[]` 的反转，值是堆的位置
+
+3. `keys[]`
+
+    > 对象数组，下标是索引，值是对象本身
+
+### 4.2 使用优先队列的多项归并
 
 ```java
-public calss Multiway {
+public class Multiway {
+
     public static void merge(In[] streams) {
         int N = streams.lenth;
         // Notice tha the N is the number of the STREAM,
@@ -138,7 +188,7 @@ public calss Multiway {
         IndexMinPQ<String> pq = new IndexMinPQ<String> (N);
 
         for (int i = 0; i < N; i++) {
-            if (!streams[i].isEmpty) {  // That is a Stream
+            if (!streams[i].isEmpty()) {  // That is a Stream
                 // Insert the stream
                 pq.insert(i, streams[i].readString());
             }
@@ -150,24 +200,26 @@ public calss Multiway {
             int i = pq.delMin();
 
             // Keep reading next String
-            if (!streams[i].isEmpty() {
+            if (!streams[i].isEmpty()) {
                 pq.insert(i, streams[i].readString());
             }
         }
 
-        public static void main(String[] args) {
-            int N = args.lenth;
-            In[] streams = new In[N];
-            for (int i = 0; i < N; i++) {
-                streams[i] = new In(args[i]);
-            }
-            merge(streams);
+    }
+
+
+    public static void main(String[] args) {
+        int N = args.lenth;
+        In[] streams = new In[N];
+        for (int i = 0; i < N; i++) {
+            streams[i] = new In(args[i]);
         }
+        merge(streams);
     }
 }
 ```
 
-## 7.3 堆排序
+## 5. 堆排序
 
 堆排序是优先队列的一种应用；
 它将元素插入到优先队列中，然后通过删除最大元素或者删除最小元素来达到排序的目的
@@ -176,19 +228,34 @@ public calss Multiway {
 
 它包含了两个步骤，**建立二叉堆**和**销毁二叉堆**
 
-### 7.3.1 建立二叉堆
+### 5.1 实现原理
+
+#### 5.1.1 建立二叉堆
 
 需要注意的是，**数组其实就是一个二叉堆！**
 所以我们只需要对数组进行**二叉堆重建(reheapifying)**，那么建立的步骤就完成了
 
-### 7.3.2 销毁二叉堆（排序）
+```java
+for (int k = N / 2; k >= 1; k--) {
+    sink(pq, k, N);
+}
+```
+
+#### 5.1.1 销毁二叉堆（排序）
 
 二叉堆可以帮助我们获取最大或者最小的元素，所以我们只需要将其删除出二叉堆，然后插入到一个新数组就可以了。
 
 但是要注意的是，我们应该如何去删除最大的元素呢？
 实际上，我们不需要真正的“删除”这个元素（即释放它的内存）；
 我们只是在进行排序，所以我们只需要将它**交换**，或者说将它放到正确的位置，即可。
+```java
+while (N>1) {
+    exch(a,1, N--);
+    sink(a, 1, N);
+}
+```
 
+### 5.2 实现
 
 ```java
 public static void sort(Comparable[] a) {
@@ -212,27 +279,32 @@ public static void sort(Comparable[] a) {
 }
 ```
 
-> 注意，如果需要升序，应该使用删除最大元素的二叉堆；
+注意，如果需要升序，应该使用删除最大元素的二叉堆；
+
 同理，如果需要降序，应该使用删除最小元素的二叉堆；
+
 因为交换使得删除的元素被交换到了数组尾部。
 
+需要注意的是，我们这里使用的是 1-base 的堆，而普通的数组是 0-base 的；
 
-### 7.3.3 性能
+所以需要在索引计算上小心谨慎。
 
+### 5.3 性能
 
 进行 $N$ 个数据元素的排序，堆排序仅仅需要 $(2NlgN + 2N)$ 次的比较和一半的交换
 
-> 虽然它的时间复杂度是线性级别的，但是它需要很少的内存就可以处理很大型的数据。
+虽然它的时间复杂度是线性级别的，但是它需要很少的内存就可以处理很大型的数据。
 
 同时，堆排序在最坏情况下**可以保证** $NlogN$ 的复杂度，而且是**原地排序**（不需要多余空间）
 
-> 尽管如此，堆排序的应用仍然没有快速排序广泛和频繁，主要是因为：
+尽管如此，堆排序的应用仍然没有快速排序广泛和频繁，主要是因为：
 
-> 1. 堆排序的内循环比快速排序要复杂
-    >> 循环技术和各种需要注意的地方较快速排序多
+1. 堆排序的内循环比快速排序要复杂
+    > 循环技术和各种需要注意的地方较快速排序多
 
-> 2. 堆排序**不能有效利用缓存**
-    >> 堆排序载入大数组时，数组的引用会很可能布满整个内存，而快速排序是递归调用，保留着很多局部的引用，所以快速排序在**利用缓存的效率上**比堆排序高。
-    现代机器的缓存命中率一般都会在 95% 以上，所以**有效的利用缓存是很重要的**。
+2. 堆排序**不能有效利用缓存**
+    > 堆排序载入大数组时，数组的引用会很可能布满整个内存，而快速排序是递归调用，保留着很多局部的引用，所以快速排序在**利用缓存的效率上**比堆排序高。
 
-> 3. 同时和归并排序相比，堆排序是**不稳定**的，在开发一些要求排序稳定性的程序时，显然应该选择归并排序
+    > 现代机器的缓存命中率一般都会在 95% 以上，所以**有效的利用缓存是很重要的**。
+
+3. 同时和归并排序相比，堆排序是**不稳定**的，在开发一些要求排序稳定性的程序时，显然应该选择归并排序
