--- a/Algorithm/符号表.md
+++ b/Algorithm/符号表.md
@@ -1,4 +1,4 @@
-# 9. 符号表
+#  符号表
 
 Tags: Algorithm
 
@@ -6,54 +6,55 @@ Tags: Algorithm
 
 <!-- MDTOC maxdepth:6 firsth1:1 numbering:0 flatten:0 bullets:0 updateOnSave:1 -->
 
-[9. 符号表](#9-符号表)  
-&emsp;[9.1 符号表](#91-符号表)  
-&emsp;&emsp;[9.1.0 符号表的设计](#910-符号表的设计)  
-&emsp;&emsp;[9.1.1 API](#911-api)  
-&emsp;&emsp;&emsp;[9.1.1.1 关键的 API](#9111-关键的-api)  
-&emsp;&emsp;&emsp;[9.1.1.2 在有序符号表中的其他方法](#9112-在有序符号表中的其他方法)  
-&emsp;[9.2 在无序表中的顺序查找](#92-在无序表中的顺序查找)  
-&emsp;&emsp;[9.2.1 实现](#921-实现)  
-&emsp;&emsp;[9.2.2 性能](#922-性能)  
-&emsp;&emsp;[9.2.3 结论](#923-结论)  
-&emsp;[9.3 在有序符号表中的二分查找](#93-在有序符号表中的二分查找)  
-&emsp;&emsp;[9.3.1 实现](#931-实现)  
-&emsp;&emsp;[9.3.2 性能](#932-性能)  
-&emsp;&emsp;[9.3.3 结论](#933-结论)  
+[符号表](#符号表)   
+&emsp;[1. 符号表](#1-符号表)   
+&emsp;&emsp;[1.1 符号表的设计](#11-符号表的设计)   
+&emsp;&emsp;[1.2 API](#12-api)   
+&emsp;&emsp;&emsp;[1.2.1 关键的 API](#121-关键的-api)   
+&emsp;&emsp;&emsp;[1.2.2 在有序符号表中的其他方法](#122-在有序符号表中的其他方法)   
+&emsp;[2. 在无序表中的顺序查找](#2-在无序表中的顺序查找)   
+&emsp;&emsp;[2.1 实现](#21-实现)   
+&emsp;&emsp;[2.2 性能](#22-性能)   
+&emsp;&emsp;[2.3 结论](#23-结论)   
+&emsp;[3. 在有序符号表中的二分查找](#3-在有序符号表中的二分查找)   
+&emsp;&emsp;[3.1 实现](#31-实现)   
+&emsp;&emsp;[3.2 性能](#32-性能)   
+&emsp;&emsp;[3.3 结论](#33-结论)   
 
 <!-- /MDTOC -->
 
 ---
 
-## 9.1 符号表
+## 1. 符号表
 
 符号表是一个储存键值对的表，同时还有**插入**和删除的功能。
 
-### 9.1.0 符号表的设计
+### 1.1 符号表的设计
 
-1.符号表不允许重复的键
+1. 符号表不允许重复的键
 
     > 键值对是唯一的，一个键只对应一个值
 
 2. 符号表不允许空键和空值
 
-    > 这是因为空键会导致 Runtime Exception
+    > 这是因为空键会导致 `Runtime Exception`
     不允许空值可以让我们通过更少的 API 来实现更多的类似插入删除的操作
-    >
-    我们可以通过 `get()` 来测试一个键是否是空键
+
+    > 我们可以通过 `get()` 来测试一个键是否是空键
     通过 `put()` 的空值来删除这个键
 
 3. 只通过 `compareTo()` 方法来去判断两个键的相等性
 
     > 如果我们混合使用 `equal()` 和 `compareTo()` 方法，那么这将会导致很多不必要的浪费
-    为了避免这种使用不同方法所造成的浪费，我们决定只使用 `compareTo()` 来去判断相等性
 
-### 9.1.1 API
+    > 为了避免这种使用不同方法所造成的浪费，我们决定只使用 `compareTo()` 来去判断相等性
+
+### 1.2 API
 
 这里展现了我们应该使用在符号表的 API ，这些 API 主要对键值对进行操作；
 之后的内容将基于这里给出的 API 来进行。
 
-#### 9.1.1.1 关键的 API
+#### 1.2.1 关键的 API
 
 最为关键的符号表 API 是 `put()` 和 `get()`
 
@@ -73,12 +74,13 @@ void put(Key key, Value value)
 Value get(Key key)
 ```
 
-#### 9.1.1.2 在有序符号表中的其他方法
+#### 1.2.2 在有序符号表中的其他方法
 
 这些 API 是应用于**有序符号表**的
 这里只展示了一些关键方法，还有一些冗余方法用于更方便的操作，这里不予展示
 
 API 包括：
+
 1. `min()` 和 `max()`
 2. `floor()` 和 `ceiling()`
 3. `rank()` 和 `select()`
@@ -120,13 +122,13 @@ Iterable<Key> keys()
 Iterable<Key> keys(Key lo, Key hi)
 ```
 
-## 9.2 在无序表中的顺序查找
+## 2. 在无序表中的顺序查找
 
 当我们实现一个符号表的时候，我们通常使用链表的形式来实现；
 
 使用这样的一个数据结构时，我们只能以**顺序**的形式进行搜索，仅仅通过在单链接链表中遍历所有的节点
 
-### 9.2.1 实现
+### 2.1 实现
 
 ```java
 public class SequentialSearchST<Key, Value> {
@@ -170,25 +172,29 @@ public class SequentialSearchST<Key, Value> {
 }
 ```
 
-### 9.2.2 性能
+### 2.2 性能
 
-在一个具有 $N$ 个节点的符号表中，使用顺序查找方法，在最坏情况下，需要 $N$ 次的比较
+在一个具有 $N$ 个节点的符号表中，使用顺序查找方法，在最坏情况下，需要 $N$ 次的比较。
+
 特别的是，插入 $N$ 个节点，需要 $\sim N^2/2$ 次的比较
 
-### 9.2.3 结论
+### 2.3 结论
 
 我们可以看到，使用链表实现符号表时，它需要使用顺序查找方法，这样子使得查找的效率变得很低下；
+
 这样子的实现方式，并不能满足我们现今对大数据处理的需求。
 
-## 9.3 在有序符号表中的二分查找
+## 3. 在有序符号表中的二分查找
 
 为了实现更快的查找性能，我们需要转用**数组**来实现符号表；
+
 对于一个**有序符号表**来说，我们可以使用**二分查找**的方法来进行搜索；
 后面会看到，使用二分查找将会大大提高我们的搜索效率
 
-### 9.3.1 实现
+### 3.1 实现
 
 我们使用两个平行的数组来分别储存键和值；
+
 然后我们使用 `rank()` 方法来帮助我们找到一个特定的键值对
 
 ```java
@@ -264,30 +270,36 @@ public int rank(Key key) {
 
 1. 使用 `mid = lo + (hi - lo) / 2;` 来避免溢出
 
-    > 为了理解这点，你需要明白，lo, hi 和 mid 只是键值的**位置**，而不是键值的值。
-我们只需要获取中间元素的**位置**，如果一个数组的元素总数很大，那么使用 `hi + lo` 就会导致溢出，使得 `mid` 的结果甚至都不在 `[lo...hi]` 之间。
+    > 为了理解这点，你需要明白，`lo`, `hi` 和 `mid` 只是键值的**位置**，而不是键值的值。
+
+    > 我们只需要获取中间元素的**位置**，如果一个数组的元素总数很大，那么使用 `hi + lo` 就会导致溢出，使得 `mid` 的结果甚至都不在 `[lo...hi]` 之间。
 
     > 为了防止溢出，或者说为了保证 `mid` 的结果落在 `[lo...hi]` 之间，那么我们就需要使用另一种计算方式；
     即，通过**步长**的方式来获取中间位置，通过使用 `lo + 步长` 的方式，可以有效的避免溢出的出现。
-    所以，我们使用 `mid = lo + (hi - lo) / 2` 来获取中间位置。
+
+    > 所以，我们使用 `mid = lo + (hi - lo) / 2` 来获取中间位置。
 
 2. 当数据元素小于 5 时，使用顺序查找来降低出错率
 
-    > 众做周知，顺序查找比二分查找更不容易出错，当数据元素小于 5 的时候，顺序查找和二分查找并没有什么大的性能差异，此时使用顺序查找来降低出错率是可以接受的。
+    > 顺序查找比二分查找更不容易出错。
+
+    > 当数据元素小于 5 的时候，顺序查找和二分查找并没有什么大的性能差异，此时使用顺序查找来降低出错率是可以接受的。
 
 
-### 9.3.2 性能
+### 3.2 性能
 
 在一个 $N$ 个键值的符号表中，使用二分查找，需要不超过 $lgN + 1$ 次的比较
 
 但是在同时需要插入和删除的操作的时候，二分查找的效率还是远远不能满足我们的需求
 
 如果你需要在一个 $N$ 个元素个数组中插入一个元素，你需要 $\sim 2N$ 次的数组访问；
+
 而且如果你需要插入 $N$ 个元素到一个空表里，你需要 $\sim N^2$ 次的数组访问。
 
-### 9.3.3 结论
+### 3.3 结论
 
-在有序符号表中使用二分查找，可以将时间复杂度减少到 $lgN$ 级别。
+在有序符号表中使用二分查找，可以将时间复杂度减少到 $logN$ 级别。
 
 对于一个静态的符号表（即不允许插入和删除元素的表），在查找之前将其进行排序是值得的；
+
 但是这种形式的查找还是不能满足我们对于**快速的查找的同时支持快速的插入和删除操作**。
